Be more thorough with exploiting PRNG weakness

--- a/index.html
+++ b/index.html
@@ -397,6 +397,7 @@
             <tr>
                 <th scope="col">Team</th>
                 <th scope="col">Lead</th>
+                <th scope="col">Seed</th>
             </tr>
         </thead>
         <tbody id="potential-teams-body"></tbody>
